fixed overflowing math images

--- a/resources/styles/loop.less
+++ b/resources/styles/loop.less
@@ -552,6 +552,10 @@ label[for=mw-fr-commentbox] {
 .table-hover tr:hover {
 	background-color: @content-outter-background !important;
 }
+/* Math */
+.mwe-math-fallback-image-inline {
+    max-width: 100%;
+}
 
 /** *** *** *** *** *** *** *** *** *** *** **/
 /**                LOOP AREA                **/
